[tool.poetry]
name = "hw13-1"
version = "0.1.0"
description = ""
authors = ["VadymBoyko <109297726+VadymBoyko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw13_1"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.10"
psycopg2 = "^2.9.6"
alembic = "^1.10.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^1.10.7"}
passlib = "^1.7.4"
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
fastapi-mail = "^1.2.7"
cloudinary = "^1.32.0"
redis = "^4.5.4"
fastapi-limiter = "^0.1.5"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
